Add testing and mocking  modules
