# cmd/api/auth.go
@@ -109,8 +109,8 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 }
 
 type CreateUserTokenPayload struct {
-	Email    string `json:"email" validate:"required,email,max=255"`
-	Password string `json:"password" validate:"required,min=3,max=24"`
+	Email string `json:"email" validate:"required,email,max=255"`
+	//Password string `json:"password" validate:"required,min=3,max=24"`
 }
 
 // CreateTokenHandler Go docs
