# docs/swagger.yaml
@@ -21,13 +21,8 @@ definitions:
       email:
         maxLength: 255
         type: string
-      password:
-        maxLength: 24
-        minLength: 3
-        type: string
     required:
     - email
-    - password
     type: object
   main.FollowUser:
     properties:
@@ -70,6 +65,10 @@ definitions:
         type: integer
       is_active:
         type: boolean
+      role:
+        $ref: '#/definitions/store.Role'
+      role_id:
+        type: integer
       token:
         type: string
       username:
@@ -146,6 +145,17 @@ definitions:
       version:
         type: integer
     type: object
+  store.Role:
+    properties:
+      description:
+        type: string
+      id:
+        type: integer
+      level:
+        type: string
+      name:
+        type: string
+    type: object
   store.User:
     properties:
       created_at:
@@ -156,6 +166,10 @@ definitions:
         type: integer
       is_active:
         type: boolean
+      role:
+        $ref: '#/definitions/store.Role'
+      role_id:
+        type: integer
       username:
         type: string
     type: object
